[package]
name = "cel"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
magnus = { version = "0.8.2", features = ["chrono", "rb-sys"] }
rb-sys = { version = "0.9.128", features = ["stable-api-compiled-fallback"] }
cel = { version = "0.13.0", features = ["chrono", "regex", "json"] }
chrono = "0.4.45"
